--- a/config.toml
+++ b/config.toml
@@ -2,22 +2,49 @@ baseURL = 'http://omid.dev/'
 title = 'Omid Farhang'
 theme = 'ananke'
 
-copyright = '© 2022 Omid Farhang.'
+copyright = 'All rights reserved.'
 defaultContentLanguage = 'en'
+
+disqusShortname = 'omidnetwork'
+
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    hl_inline = false
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = false
+    noHl = false
+    style = 'monokai'
+    tabWidth = 4
+
 [languages]
   [languages.en]
     title = 'Omid Farhang'
+    languageName = 'English'
+    languageCode = 'en-US'
     weight = 1
-    languageCode = 'en-us'
-    [languages.en.params]
-      linkedin = 'https://linkedin.com/whoever'
   [languages.fa]
     title = 'امید فرهنگ'
+    languageName = 'فارسی'
+    languageCode = 'fa-IR'
     weight = 2
     languagedirection = 'rtl'
   [languages.de]
     title = 'Omid Farhang'
+    languageName = 'Deutsch'
+    languageCode = 'de-DE'
     weight = 2
 [params]
+  linkedin = 'https://linkedin.com/in/omidfarhang'
+  twitter = 'https://twitter.com/omidfarhangen'
+  github = 'https://github.com/omidfarhang'
+  mastodon = 'https://floss.social/@omid'
+  mainSections = ["posts"]
   [params.navigation]
     help = 'Help'
