enable HTML in markdown

--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,9 @@ show_reading_time = true
 
 
 [markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
   [markup.highlight]
     anchorLineNos = false
     codeFences = true
