--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ defaultContentLanguage: en
 googleAnalytics: G-EFXLS4ZNG6
 show_reading_time: true
 
-disqusShortname: omidnetwork
+# disqusShortname: omidnetwork
 
 
 menu:
@@ -177,7 +177,7 @@ params:
     - posts
 
   displayFullLangName: true
-  comments: true
+  comments: false
   ShowReadingTime: true
   ShowShareButtons: true
   ShowPostNavLinks: true
