--- a/config.yaml
+++ b/config.yaml
@@ -27,6 +27,10 @@ menu:
       name: Services
       url: /services
       weight: 2
+    - identifier: search
+      name: Search
+      url: /search
+      weight: 5
 
 
 
@@ -81,6 +85,9 @@ languages:
         - name: Services
           url: /services
           weight: 2
+        - name: Search
+          url: /search
+          weight: 5
   # Persian
   fa:
     title: امید فرهنگ
@@ -108,6 +115,9 @@ languages:
         - name: خدمات
           url: /services
           weight: 2
+        - name: جستجو
+          url: /search
+          weight: 5
   # Deutsch
   de:
     title: Omid Farhang
@@ -134,6 +144,9 @@ languages:
         - name: Dienstleistungen
           url: /services
           weight: 2
+        - name: Suche
+          url: /search
+          weight: 5
 
 
 params:
