--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseURL: 'https://omid.dev/'
-title: Omid Farhang
+title: Omid Farhang - Senior Frontend Developer and Linux Admin
 theme: PaperMod
 copyright: '© 2022 Omid Farhang | All rights reserved.'
 defaultContentLanguage: en
@@ -7,7 +7,6 @@ googleAnalytics: G-EFXLS4ZNG6
 show_reading_time: true
 
 # disqusShortname: omidnetwork
-
 
 menu:
   main:
