--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseURL: 'https://omid.dev/'
-title: Omid Farhang - Senior Frontend Developer and Linux Admin
+title: Omid Farhang
 theme: PaperMod
 copyright: '© 2022 Omid Farhang | All rights reserved.'
 defaultContentLanguage: en
