--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ build/Release
 # Build directories
 public
 dist
+resources
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
