--- a/hugo.yaml
+++ b/hugo.yaml
@@ -66,7 +66,7 @@ languages:
       keywords: [Fullstack Web Developer, Angular, "Node.js", Linux, Networking, "High-performance Web Solutions", Team Leadership, Web Development, Omid Farhang, JavaScript, TypeScript, Frontend Development, Backend Development, Software Architecture]
       profileMode:
         enabled: true
-        imageUrl: "/images/bio-photo.jpg"
+        imageUrl: "/images/bio-photo-150x150.jpg"
         subtitle: "I'm a Senior Developer and Also a network administrator, Working freelance and hunting for linux stuff"
       # homeInfoParams:
       #   Title: "Hi, I’m Omid Farhang"
@@ -99,7 +99,7 @@ languages:
       keywords: [Fullstack Web Developer, انگولار, "نود جی اس", لینوکس, شبکه, "High-performance Web Solutions", رهبری تیم, برنامه نویسی وب, امید فرهنگ, جاوا اسکریپت, تایپ اسکریپت, برنامه نویسی فرانت, برنامه نویسی بک اند, معماری نرم افزار]
       profileMode:
         enabled: true
-        imageUrl: "/images/bio-photo.jpg"
+        imageUrl: "/images/bio-photo-150x150.jpg"
         subtitle: "من یک برنامه‌نویس وب و مدیر شبکه هستم، به طور آزاد کار میکنم و به سیستم های لینوکسی علاقه دارم"
     # Persian Menu
     menu:
@@ -121,7 +121,7 @@ params:
   # profileMode:
   #     enabled: true
   #     subtitle: "I'm a Senior Developer and Also a network administrator, Working freelance and hunting for linux stuff"
-  #     imageUrl: "/images/bio-photo.jpg"
+  #     imageUrl: "/images/bio-photo-150x150.jpg"
 
   assets:
   # Favicons
