--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://old.omid.dev/'
+baseURL: 'https://omid.dev/'
 title: Omid Farhang
 theme: omid-dev
 copyright: '© 2025 Omid Farhang | All rights reserved.'
