--- a/themes/omid-dev/theme.toml
+++ b/themes/omid-dev/theme.toml
@@ -1,11 +1,9 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "PaperMod"
-license = "MIT"
-licenselink = "https://github.com/adityatelange/hugo-PaperMod/blob/master/LICENSE"
+name = "omid-dev-theme"
 description = "A fast, clean, responsive Hugo theme"
-homepage = "https://adityatelange.github.io/hugo-PaperMod/"
+homepage = "https://omid.dev/"
 tags = [
   "responsive",
   "simple",
@@ -40,12 +38,5 @@ features = [
 min_version = "0.112.4"
 
 [author]
-  name = "Aditya Telange"
-  homepage = "https://github.com/adityatelange/"
-
-# If porting an existing theme
-[original]
-  name = "Paper"
-  author = "nanxiaobei"
-  homepage = "https://github.com/nanxiaobei"
-  repo = "https://github.com/nanxiaobei/hugo-paper/"
+  name = "Omid Farhang"
+  homepage = "https://omid.dev/"
