improve resume layout

--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -100,7 +100,7 @@ experience:
     responsibilities:
       - Web Developer
       - IT Support to maintain Windows Based computers.
-courses:
+certifications:
   - title: CCNA Routing and Switching 200-120
     provider: Cisco
     institution: Kahkeshan
